--- a/情報処理安全確保支援士/ポケット攻略本/脅威とサイバー攻撃の手法.md
+++ b/情報処理安全確保支援士/ポケット攻略本/脅威とサイバー攻撃の手法.md
@@ -1,4 +1,5 @@
 # 情報セキュリティとは
+
 ## 情報セキュリティの定義
 経営資源を脅威から守り、安全に経営を行うための活動全般。
 
@@ -19,3 +20,55 @@
 利用者がある**情報を使いたいと思った時**に、**いつでも使える状態**を「**可用性がある**」という。
 
 
+
+# リスク
+
+## リスクとは
+リスクは**情報資産**と**脅威**と**脆弱性**が結びつくことにより顕在化して、現実のものになる。
+<u>セキュリティ対策とは、リスクの３つの要素のうち、少なくとも１つを取り除くこと</u>
+
+## 情報資産
+情報資産は「大事なもの」。
+
+## 脅威
+**脅威は、情報資産を脅かすもの**
+攻撃者の不正侵入、マルウェア、泥棒、自然災害など。
+
+### 物理的脅威
+- 火災、落雷などの自然災害
+- 盗難・破壊
+- 機器の故障
+
+### 技術的脅威
+- ソフトウェアのバグ
+- マルウェア、不正アクセス、盗聴
+
+### 人的脅威
+- 操作ミスによるデータや機器の故障
+- 内部犯による情報漏えいや内通
+フールプルーフなどのミスを起こさせない設計をする
+
+## 脆弱性
+脆弱性は、脅威につけ込まれる隙は弱点。
+
+### 物理的脆弱性
+目に見える形で掲示される脆弱性
+- 耐震・耐火構造の不備
+- 機器故障対策の不備
+- 紛失対策の不備
+
+### 技術的脆弱性
+**セキュリティホール**の存在や、アクセスコントロールの不備など、**目に見えない**のが特徴。
+- アクセスコントロールの不備
+- マルウェア対策の不備
+- セキュリティホール
+ペネとレーションテスト：攻撃者が行うような攻撃を、実際に行い、脆弱性を検証する手法
+
+### 人的脆弱性
+#### 組織管理の不備
+その業務に必要最小限の権限を付与する、業務プロセスを透明化や相互監視体制を構築して対応→最小権限の原則
+#### 過失
+人が業務を行う以上、不可避の脅威→フールプルーフのような仕組みで対応
+
+#### JIS Q 27000
+リスクを発見、認識及び記述するプロセス
