--- a/情報処理安全確保支援士/ポケット攻略本/脅威とサイバー攻撃の手法.md
+++ b/情報処理安全確保支援士/ポケット攻略本/脅威とサイバー攻撃の手法.md
@@ -65,10 +65,16 @@
 ペネとレーションテスト：攻撃者が行うような攻撃を、実際に行い、脆弱性を検証する手法
 
 ### 人的脆弱性
+
 #### 組織管理の不備
 その業務に必要最小限の権限を付与する、業務プロセスを透明化や相互監視体制を構築して対応→最小権限の原則
+
 #### 過失
 人が業務を行う以上、不可避の脅威→フールプルーフのような仕組みで対応
 
 #### JIS Q 27000
 リスクを発見、認識及び記述するプロセス
+
+
+
+# 攻撃者
