--- a/情報処理安全確保支援士/ポケット攻略本/脅威とサイバー攻撃の手法.md
+++ b/情報処理安全確保支援士/ポケット攻略本/脅威とサイバー攻撃の手法.md
@@ -72,9 +72,35 @@
 #### 過失
 人が業務を行う以上、不可避の脅威→フールプルーフのような仕組みで対応
 
-#### JIS Q 27000
 リスクを発見、認識及び記述するプロセス
 
 
 
 # 攻撃者
+
+## 攻撃者の目的
+- 金銭：最も多い動機。ランサムウェアなどは典型的な例で、他人のコンピュータをロックして身代金を要求する。
+- 社会運動：ハクティビズムと呼ばれ、行う者をハクティビストと呼ぶ。何らかの政治目的を達成するために情報の漏えい・暴露を行ったり、ある企業に社会的制裁を加えるためにフェイクニュースを流通させるなど行う。
+- 自己顕示欲：ハッキングによって自分の高度な技術アピールするもの。
+- 諜報：国家を背景とした諜報機関などが行う攻撃。潤沢な資金を投じた高度で組織的な攻撃が特徴。
+
+## 攻撃者の種類
+
+### ホワイトハッカー
+ハッキング能力を行政や企業のセキュリティ確保に使おうとする者
+
+### ブラックハッカー
+高度な情報スキルを悪用して金銭的利益などを得る職業的な攻撃者
+
+### スクリプトキディ
+情報技術には疎いものの、高度なスキルを持つハッカーが開発・配布した攻撃ツールなどを使い情報システムを攻撃する者
+
+### 内部犯
+企業や組織の内部犯がその組織を攻撃する者。
+ゼロトラストなどは内部犯を視野に入れたセキュリティ対策手法。
+
+### 不正のトライアングル
+不正が生じる３つの原因。機会と動機と正当化が揃った時に不正が行われるリスクが顕在化する。
+
+
+
