リスクマネジメント

--- a/情報処理安全確保支援士/ポケット攻略本/脅威とサイバー攻撃の手法.md
+++ b/情報処理安全確保支援士/ポケット攻略本/脅威とサイバー攻撃の手法.md
@@ -104,3 +104,50 @@
 
 
 
+# リスクマネジメント
+
+## リスクマネジメント
+- リスクアセスメント
+  - リスク分析
+  - リスク評価
+- リスク対応
+  - リスク回避
+  - リスク最適化
+  - リスク移転
+  - リスク保有
+- リスク受容
+- リスクコミュニケーション
+
+## リスクアセスメント
+自社のリスクを分析し、そのリスクを評価する。
+
+### ベースラインアプローチ
+標準化されたツールやガイドラインを自社に適用して、リスクを洗い出す。
+低コスト、低難易度が特徴だが、自社特有のリスクを見逃す可能性がある。
+
+### 詳細リスク分析
+情報資産の洗い出しから、脅威の把握、脆弱性の検証までを丹念に積み重ねる。リスクの正確な把握に特徴があるが、手間がかかり、評価者にも高いスキルが求められる。
+
+### 複合アプローチ
+一般的な業務にはベースラインアプローチ、重要業務には詳細リスク分析といった具合にメリハリをつけることで、コストと効果のバランスを目指す方法。
+
+## リスク対応
+
+### リスク回避
+リスクがある資産そのものを無くしてしまう方法。
+
+### リスク低減
+セキュリティソフトを入れるなど、リスクは存在しつつも、その発生頻度や被害額を小さくしようとするもの。
+
+### リスク移転
+保険を掛けたり、アウトソースするなど、リスクを別の人に引き受けて貰おうとする対応方法。
+
+### リスク保有
+リスクを持ち続けること。予想被害額より対策費の方が大きいので敢えて何もしない。
+
+## ポイント
+- 優先度を付ける
+- リスクの受容水準を決める
+
+
+
