情報収集と共有

--- a/情報処理安全確保支援士/ポケット攻略本/脅威とサイバー攻撃の手法.md
+++ b/情報処理安全確保支援士/ポケット攻略本/脅威とサイバー攻撃の手法.md
@@ -151,3 +151,70 @@
 
 
 
+# 情報収集と共有
+
+## 脆弱性情報を公開する
+脆弱性情報データベースを「公開した方が良い」という思想で作られている。
+
+### JVN
+日本で最もお馴染みの脆弱性情報データベース。
+IPCERT/CCとIPAが管理・運用している。
+日本語情報の質・量は最大
+
+### CVE（共通脆弱性識別子）
+アメリカの非営利団体であるMITREが管理している脆弱性情報。
+世界有数のデータベースであること、ベンダに依存しない情報を提供することが大きな特徴。
+CVEは脆弱性に一意な番号（CVE-ID）をつけ、脆弱性の網羅と重複防止に貢献
+
+### CVSS(Common Vulnerability Scoring System)
+CVSS（共通脆弱性評価システム）とは、情報システムの脆弱性情報を包括的に収集し、一貫性のある評価基準で示す仕組み。
+FIRST(Forum of Incident and Security Teams)が管理・運営を行う。
+脆弱性の評価に以下の３つの基準を使う。
+
+#### 基本評価基準
+脆弱性の特性を表す。この脆弱性が機密性、完全性、可用性にどう影響するかを評価し、**CVSS基本値**（固定値）として算出する。その脆弱性の基本的な深刻度が分かる。
+
+#### 現状評価基準
+脆弱性の現在の深刻度を表す。同じ脆弱性でも、エクスプロイトや修正バッチの有無などでリスクの大きさが異なるため、これらを加味して**CVSS現状値**（可変値）として算出する。
+
+#### 環境評価基準
+最終的な脆弱性の深刻度を表す。同じ脆弱性でも利用者の環境によってはリスクの大きさが異なるため、これらを加味して**CVSS環境値**（可変値）として算出する。
+
+### CWE(Coommon Weakness Enumeration)
+CWE（共通脆弱性タイプ一覧）とは、ソフトウェアが持ちうる脆弱性の種類を体系化・標準化したもの
+脆弱性のタイプを大きく４つに分類し、その中でさらに細分化する。
+
+#### ビュー
+ある観点（例えば開発者視点、研究者視点など）から脆弱性を集めたもの。C言語が原因となるもの、Javaが原因となるものなど、プログラミング言語に着目したビューもある。
+
+#### カテゴリー
+特性によって脆弱性をグループ化したもの。暗号に関する脆弱性、ユーザインタフェースに関する脆弱性などと分類されている。
+
+#### 脆弱性
+個々の脆弱性を表すもの。最も抽象的なクラス（例：リソースの競合）、特定の技術に依存しないベース（例：共有データへの非同期アクセス）、個々の技術に結びついたバリアント（例：セッションを適切に識別できない）に分けられている。
+
+#### 複合要因
+複数の要因による脆弱性を表す。複数の脆弱性が結びついたものをコンポジット、あるトラブルが別のトラブルを引き起こして脆弱性を発生させるものをチェインと呼ぶ。
+
+### PCI DSS(Payment Card Industry Data Security Standard)
+PCI DSSはクレジットカード業界のセキュリティ標準。
+情報システムそのものの技術的なセキュリティ対策を目指している。
+主な内容は以下。
+- 安全なネットワークの構築と維持
+- カード会員データの保護
+- 脆弱性管理プログラムの維持
+- 強力なアクセス制御手法の導入
+- ネットワークの定期的な監視及びテスト
+- 情報セキュリティポリシーの維持
+
+### J-CSIP
+サイバー情報共有イニシアティブのことで、IPAが管理・運用する。
+サイバー攻撃などに対する攻撃をシェアすることで、重要インフラなどを担う企業が情報を提供しやすくしている。
+
+
+
+
+
+
+
+
