ポートスキャン

--- a/情報処理安全確保支援士/ポケット攻略本/脅威とサイバー攻撃の手法.md
+++ b/情報処理安全確保支援士/ポケット攻略本/脅威とサイバー攻撃の手法.md
@@ -213,6 +213,41 @@ PCI DSSはクレジットカード業界のセキュリティ標準。
 
 
 
+# ポートスキャン
+
+## 不正アクセス
+通常のアクセスと不正アクセスを隔てる境界は不正アクセス禁止法によって定義される。
+- 正規の利用権限を持ってない、あるいは権限以上の行為をネットワークを介して行うこと。
+- 保護対象はアクセスコントロールされているシステム。
+- セキュリティホールを突いた攻撃も不正アクセスとなる。
+
+### ネットワークスキャン
+ICMPのツールであるpingを使って手当たり次第に疎通確認を行い、実在するPCを調べるネットワークスキャンはその一つ。
+
+#### 対策
+pingはネットワーク管理に便利だが、応答しないように設定するとセキュリティは向上する。
+NATを使うと、外部からネットワーク構成を把握しにくくなる。
+
+### ポートスキャン
+ネットワークスキャンなどで実在するPCのIPアドレスが判明すると、今度はそのPCの開いている（接続できる）ポートが探られる。
+
+#### ポートが開いているか調べる方法
+接続可能なポートからSYN、ACKが返信があることで確認される。
+
+#### 対策
+不必要なポートを閉じる。
+IDSの導入
+
+
+
+
+
+
+
+
+
+
+
 
 
 
