バッファオーバーフロー

--- a/情報処理安全確保支援士/ポケット攻略本/脅威とサイバー攻撃の手法.md
+++ b/情報処理安全確保支援士/ポケット攻略本/脅威とサイバー攻撃の手法.md
@@ -240,12 +240,33 @@ IDSの導入
 
 
 
+# バッファオーバーフロー
+メモリ上に用意された領域を超えてデータ格納しようとすると、他のデータ用に確保された領域を侵し、データ破壊や誤作動を引き起こさせること。
 
+## バッファオーバーフローの仕組み
+攻撃者の攻撃が高度である場合は、単に誤作動を起こすだけでなく、リターンアドレスの部分に正確に別のアドレスを上書きされ、そこに格納されたプログラムを実行することさえ可能。
 
+### ヒープ攻撃
+プログラムから動的に確保・解放できるメモリ領域。
 
+#### バッファオーバーフローへの対策
+- バッファに書き込まれるデータのサイズは必ず確認する。
+- サイズオーバーの場合、実行を止めるか、バッファを拡大する。
 
+## C言語でのバッファオーバーフロー対策
 
+### 危険な関数と置き換え
+バッファの上限を指定できたり、サイズオーバー時に自動的にバッファを拡張する関数が整備されている。
 
+### 終端文字
+C言語では、文字列の最後を表すのに終端文字(null, %00)を使う。
+そのため、利用者からの文字入力を受け付けるフォームで終端文字を入力されると、思わぬ誤作動を引き起こすことがある。
+上記を利用して、利用者が勝手に拡張子を付けることなどができる。
+
+#### 対策
+- 利用者が入力したデータは絶対に信用せず、チェックする。
+- 不正な文字を見つけた時は、エスケープ処理などで無害化する。
+- 終端文字も１文字分のデータ。サイズ計算では注意する。
 
 
 
