なりすまし

--- a/情報処理安全確保支援士/ポケット攻略本/脅威とサイバー攻撃の手法.md
+++ b/情報処理安全確保支援士/ポケット攻略本/脅威とサイバー攻撃の手法.md
@@ -397,3 +397,28 @@ WEPから移行しやすいように工夫された。TKIP、RC4
 
 IDS（Intrusion Detection System）は、企業や組織のネットワークを監視し、不正アクセスや疑わしい通信を検知するセキュリティサービス。
 
+
+
+# なりすまし
+他の誰かの誰かのフリをすること。
+
+## ユーザID、パスワードの不正入手
+
+## IPスプーフィング
+IPアドレスと詐称して、実際に使っているマシンとは異なるIPアドレスが送信元であるように錯覚させる方法。
+
+IPヘッダに含まれている送信元アドレスフィールドを書き換えることで可能。
+
+### 対策
+- 他の階層（トランスポート層やアプリケーション層）の情報を併用して通信を検査する。
+- 前後のパケットとの関係を調べるステートフルインスペクションを行う。
+
+## 踏み台攻撃
+攻撃者が会社や省庁を攻撃するとき、他の人のコンピュータを経由して不正行為を行うこと。
+
+### 対策
+- 公開サーバのDMZ化
+- パッチの適用
+
+### 多段プロキシ
+プロキシサーバを何台も経由する踏み台攻撃
