--- a/情報処理安全確保支援士/ポケット攻略本/脅威とサイバー攻撃の手法.md
+++ b/情報処理安全確保支援士/ポケット攻略本/脅威とサイバー攻撃の手法.md
@@ -397,7 +397,7 @@ WEPから移行しやすいように工夫された。TKIP、RC4
 
 IDS（Intrusion Detection System）は、企業や組織のネットワークを監視し、不正アクセスや疑わしい通信を検知するセキュリティサービス。
 
-
+IPS（Intrusion Prevention System）は、侵入防御システムと呼ばれ、企業や組織のネットワークを監視し、不正アクセスやサイバー攻撃に使われる通信を検知し遮断するセキュリティサービス。
 
 # なりすまし
 他の誰かの誰かのフリをすること。
@@ -422,3 +422,82 @@ IPヘッダに含まれている送信元アドレスフィールドを書き換
 
 ### 多段プロキシ
 プロキシサーバを何台も経由する踏み台攻撃
+
+
+
+# DoS攻撃
+通常の範囲の通信を過剰に集中して、サービスの不全を引き起こす攻撃方法。
+
+
+## DoS攻撃
+
+### 具体的な攻撃の手段
+- TCP SYN Flood：３ウェイハンドシェイク(SYN)を大量に送りつける。
+- Connect Flood：大量のコネクションを確立させる。
+- UDP Flood：UDPポートに大量のデータを送りつける。
+- Ping Flood(ICMP Flood)：Pingを大量に送りつける。
+
+- DDoS攻撃：DoS攻撃を大量のマシンから行う。
+- DRDoS攻撃：踏み台サーバに、標的コンピュータに偽装したSYNパケットを投げる。
+
+### 〜Floodという攻撃
+「あふれさせる」の意味で〜Flood攻撃と名付けられている。
+
+### TCP SYN Flood
+TCPの3ウェイハンドシェイクを悪用した攻撃。
+
+#### 対策
+- CPUやメモリなどの資源は一定時間経過したら解放する
+- IDSやIPSを導入する。
+- 不要なポートを閉じる。
+- IPアドレスの特定が可能な場合は、通信を遮断する。
+
+### Connection Flood
+TCP SYN Floodとよく似ているが、実際にコネクションを確立させる。
+確立した方が資源の食い潰し度合いが大きいこと、コネクション制限数いっぱいまで確立すると他の利用者が通信できなくなることに特徴がある。
+
+TCP SYN Floodの場合は確立要求だけなので架空のIPアドレスで攻撃できるが、Connection Floodでは攻撃側マシンのIPアドレスは、有効で実際に通信できるアドレスが必要となる。
+
+### UDP Flood
+TCP SYN FloodをUDPで行おうというもの。UDPポートに対してデータを送り続けることで攻撃を行う。シンプルな通信でヘッダ情報も少ないことから、攻撃時にも考慮する事項が少なく、比較的容易に実行できる。
+
+### Ping Flood(ICMP Flood)
+ping（ICMPエコー要求）を大量に送りつけることで、標的になったサーバのリソースを消費させ、サービスの遅滞や停止を試みる攻撃方法。
+pingはノードの実在を確認でき、攻撃者に情報を提供してしまう側面もあるため、**pingに応答しない設定**（少なくともWAN側からのpingには応答しない）が一般的。
+
+## DDoS攻撃
+最初のDは分散の意味で、分散DoS攻撃と訳す。
+やることはDoS攻撃と一緒だが、大量のマシンから行うことでより大規模に、より攻撃マシンを特定しにくい状態にすることができる。
+
+攻撃にはボットネットが使われる。攻撃者が自前で準備するわけではなく、マルウェアに感染した大量のソンビPCが、攻撃者の指示で一斉に攻撃を行う。
+
+## 分散反射型DoS攻撃(DRDoS)
+DDoS攻撃の発展型。
+攻撃者は攻撃の標的とするコンピュータのアドレスを送信元と偽装して、踏み台サーバにSYNパケットを送信する。
+
+### DNSリフレクション攻撃
+自分の管理下にあるDNSサーバ(A)に大きな情報を登録、再帰問い合わせをしているDNSサーバ(B)に、Aに問い合わせが行われるような名前解決を要求する。
+
+たくさんのBに名前解決要求を送れば、標的の元には、大きなパケットが様々なアドレスから大量に届くことになる。攻撃の過程でパケットサイズが大きくなるため、**DNS増幅攻撃（DNS amp攻撃）**とも呼ばれる。
+
+### DNS水攻め攻撃
+DNSサーバに対して、ランダムなサブドメインを問い合わせる攻撃方法。
+**ランダムサブドメイン攻撃**とも言う。
+
+## その他のDoS攻撃
+
+### EDoS攻撃(Economic Denial of Service attack)
+経済的な負担を強いるタイプのDoS攻撃。
+
+### マルチベクトル型DDoS攻撃
+複数のDDoS攻撃手法を組み合わせて、よりダメージを大きく、対策しにくくするやり方。
+
+### NTPリフレクション攻撃（NTP増幅型DDoS攻撃）
+増幅型攻撃は効率の良いDoS攻撃手法で、送信データよりも返信データの方が大きくなるサービスを行なっているサーバは、常に増幅型攻撃の対象になり得る。
+
+### 反射攻撃に利用されやすいプロトコル
+- 特に認証等なしに応答するプロセスがあること
+- リクエストに比べて、応答部分が大きいこと
+
+### SMURF攻撃
+攻撃者がインターネット制御メッセージプロトコル（ICMP）パケットを大量に送って標的サーバーを圧倒しようとするDDoS攻撃
