DNSキャッシュポイズニング

--- a/情報処理安全確保支援士/ポケット攻略本/脅威とサイバー攻撃の手法.md
+++ b/情報処理安全確保支援士/ポケット攻略本/脅威とサイバー攻撃の手法.md
@@ -586,5 +586,55 @@ OSのコマンドを注入する攻撃手法。
 OSコマンドの呼び出し情報に不正な値を混入することで、好きなコマンドを実行する。
 
 ### 対策
-- OSコマンドを直接呼び出す関数は使わない
-- 使わざるを得ない場合は、エスケープ処理を行う
+- OSコマンドを直接呼び出す関数は使わない。
+- 使わざるを得ない場合は、エスケープ処理を行う。
+
+
+
+# DNSキャッシュポイズニング
+DNSに偽の情報を書き込むことでインターネット上の通信の流れを操ることができる。
+
+## DNSサーバの２つの種類
+
+### キャッシュサーバ
+- リゾルバに応えるのが仕事。
+- コンテンツサーバに再帰問い合わせをする。
+- 問い合わせ結果はキャッシュして、次回以降の応答を迅速化する。
+
+### コンテンツサーバ
+- 名前解決情報のオリジナルを保管するのが仕事。
+- キャッシュサーバに応える。
+- 権威サーバとも呼ばれる。
+
+#### DNSの名前解決
+- リゾルバがキャッシュサーバに問い合わせ。
+- キャッシュに情報があれば応答、なければコンテンツサーバに転送。
+- コンテンツサーバから教えてもらった情報は、しばらくキャッシュされる。
+
+## DNSキャッシュポイズニングの手順
+キャッシュサーバに偽の名前解決情報を登録させることで、そこに問い合わせを行ったリゾルバに任意のIPアドレスを教え、通信を誘導する攻撃手法。
+
+### 完成の手順
+- 攻撃者がキャッシュサーバに問い合わせる。
+- キャッシュサーバはコンテンツサーバに再帰問い合わせを行う。
+- コンテンツサーバの応答より早く、攻撃者が偽の応答を行う。
+- 偽の名前解決情報がキャッシュサーバに登録される。
+
+※ DNSは応答の真正性をトランザクションIDとポート番号で確認する。
+トランザクションIDの推測は、管理者が安易な設定を用いていると容易。
+
+### 対策
+- トランザクションIDをランダムに割り振る
+- 再帰問い合わせ時の送信元ポート番号をランダムにする
+
+## DNSSEC
+DNSを拡張したプロトコルで、DNSの名前解決情報をデジタル署名で認証する。攻撃者が偽造した名前解決情報は認証されず、キャッシュサーバの汚染が起こらない。
+
+### 手順
+- DNSの名前解決情報のハッシュ値からデジタル署名を作る。
+- デジタル署名をRRSIGレコードとして登録する。
+- 名前解決情報を受け取った側は、RRSIGレコードを公開鍵で検証する。
+
+## DNS Changer
+攻撃者が使うマルウェアの一種で、目的はDNSキャッシュポイズニングと同じ。悪意のあるサイトへブラウザを導こうとする。
+相違点は、DNSキャッシュポイズニングがDNSサーバのリソースレコードを不正に書き換えるのに対し、DNS Changerは攻撃者が用意した不正なDNSサーバに問い合わせを行う。
