マルウェア

--- a/情報処理安全確保支援士/ポケット攻略本/脅威とサイバー攻撃の手法.md
+++ b/情報処理安全確保支援士/ポケット攻略本/脅威とサイバー攻撃の手法.md
@@ -704,3 +704,51 @@ IT技術によらず機密情報や管理者権限を入手したり、標的を
 #### 対策
 - 公共の会話で、業務の話題を出さない。
 - 相手が上司でも、手順外の情報提供などはしない。
+
+
+
+# マルウェア
+
+## コンピュータウイルスの定義
+
+### ウイルスの３機能
+以下の一つでも該当すること。
+- 自己伝染機能：自分自身のコピーを作って、感染を広げていく機能
+- 潜伏機能：感染しても、しばらく大人しくしている機能
+- 発病機能：実際に悪意のある行動を行う機能
+
+## ウイルス（マルウェア）の分類
+現状では、悪意のあるソフトウェア全般をマルウェアと呼ぶ。
+- ウイルス（狭義）：他のプログラムに寄生する
+- ワーム：単独での伝染、発病が可能
+- トロイの木馬：有用な機能も持つが、背後で発病する
+
+## マルウェアの感染経路
+
+### 媒体感染
+SDカードやUSBメモリなど記憶媒体を介して感染する経路。こうした補助記録装置には自動再生機能がついているものもあり、PCに挿しただけで感染させることも可能。
+
+### ネットワーク感染
+ネットワークを介して感染する経路。伝搬速度が速いのが特徴。
+
+## マクロウイルス
+ワープロソフトや表計算ソフトのマクロ機能を利用したウイルス。
+
+## ボットネット
+攻撃者の思い通りに動くPC（ソンビPC)で作られたネットワーク。
+ボット（ボットネット構築用マルウェア）に感染すると、そのパソコンは攻撃者からの指示を待つ状態になり、一度攻撃者から指示が送られてくると、指示通りの攻撃（スパムメールの送信など）を行う。
+
+## スパムメール
+悪質な詐欺であるスパムメールも多く、規制が進みつつある。
+基本的な態度は次の二つ。
+
+### オプトアウト
+- 未承諾で広告メールを送って良い。
+- 未承諾であることと、解約手順をメール内に明示。
+
+### オプトイン
+- 未承諾で広告メールを送ってはならない。
+
+### 対策
+- メールサーバの第三者中継は禁止する。
+- 送信ドメイン認証（SPF、DomainKeysなど）で、送信者の真正性を確認する。
