マルウェアへの対策

--- a/情報処理安全確保支援士/ポケット攻略本/脅威とサイバー攻撃の手法.md
+++ b/情報処理安全確保支援士/ポケット攻略本/脅威とサイバー攻撃の手法.md
@@ -752,3 +752,51 @@ SDカードやUSBメモリなど記憶媒体を介して感染する経路。こ
 ### 対策
 - メールサーバの第三者中継は禁止する。
 - 送信ドメイン認証（SPF、DomainKeysなど）で、送信者の真正性を確認する。
+
+
+
+# マルウェアへの対策
+
+## マルウェアを見つける方法
+基本は、パターンマッチング。流通しているマルウェアを捕まえて特徴点を抽出し、それを記したパターンファイル（シグネチャ）を作り、疑わしいデータと比較することで、マルウェアを炙り出す。
+
+圧縮や暗号化でパターンを変えてくる手法もある。
+
+## その他の検出方法
+
+### ヒューリスティック法（静的ヒューリスティック法）
+- いかにもマルウェアが行いそうなことをしていないかチェックする。
+- プログラムではなく、プログラムの実行結果に着目するので、未知のマルウェアでも発見できる可能性が高まる。
+
+### ビヘイビア法（動的ヒューリスティック法）
+- 静的ヒューリスティック法の発展版。
+- 疑いのあるプログラムの動作を監視し、不正な処理を検出する。
+
+## ネットワークからの遮断
+重要性の高い業務を行うシステムでは、マルウェア感染のリスクを減らすために、ネットワークからの遮断や専用OS、専用ソフトウェアが使われる。
+
+### ネットワークからの遮断
+主要な感染経路の１つであるネットワークから隔離する。
+
+### 専用OS、専用ソフトウェアを使う
+普及したソフトほどマルウェアを作られるので、専用ソフトを使って多くの汎用マルウェアが動作しない環境にする。
+
+## 感染した場合の対応方法
+
+### 7つの対応
+
+#### 初動対応
+マルウェアの感染した場合、二次感染を拡大しないことが重要。
+- 感染したシステムの利用停止
+- ネットワークからの切断
+- 利用者へのアナウンス
+
+#### 復旧
+同じマルウェアに感染しないようにセキュリティパッチを当てたり、パターンファイルの更新を行うなど暫定的な対応を施す。
+根本的な対応策（パターンファイル更新の自動化など）は後回し。
+- マルウェアと影響範囲の特定
+- 復旧手順の確立と復旧作業
+
+#### 事後処理
+- 原因の特定と対応策の策定
+- 関係機関への届出
