--- a/情報処理安全確保支援士/ポケット攻略本/セキュリティ対策と実装.md
+++ b/情報処理安全確保支援士/ポケット攻略本/セキュリティ対策と実装.md
@@ -203,3 +203,38 @@ RC4で固定であり、ネゴシエーションの必要なし。
 ## SSL-VPN
 SSLは元々ブラウジングのために開発されたセキュアプロトコルだが、これをVPNに利用するのがSSL-VPN。
 認証のためのデジタル証明書が必要。
+
+
+
+# IDS/IPS
+IDSは検知、IPSは検知と遮断。
+
+## IDS
+
+### ホスト型IDS(HIDS)
+ホストにインストールして、そのホストを監視する。
+
+### ネットワーク型IDS(NIDS)
+ネットワーク上に配置して、そのネットワーク上を流れるパケットを監視する。
+
+### 設置場所
+- リピータハブなら、どのパケットも取得できる。
+- スイッチングハブの場合は、ミラーリングポートに接続する。
+
+### 検知(detection)の種類
+何をもって攻撃者の攻撃とするかの判断方法。
+
+### Misuse検知法
+- 不正な攻撃パターンを蓄積しパターンマッチングであぶり出す。
+
+### Anomaly検知法
+- システムの正常な状態を覚え、そこから外れた時に警告する。
+- 誤検出はMisuse法より多くなる。
+- システムの正常な状態を収集するのに時間と手間がかかる。
+
+## IPS
+IPSはIDSの機能拡張版。IDSは不正侵入の痕跡を見つけて警告を発するが、IPSはネットワークの遮断など、対処行動まで行う。
+正常な通信も遮断してしまうという事態を招く可能性を理解しておく。
+
+### 設置場所
+ネットワークの境界に置く。
