フォールトトレランス

--- a/情報処理安全確保支援士/ポケット攻略本/セキュリティ対策と実装.md
+++ b/情報処理安全確保支援士/ポケット攻略本/セキュリティ対策と実装.md
@@ -272,3 +272,31 @@ SQLインジェクション対策として問われる項目。
 
 ### 安全度比較
 静的プレースホルダ > 動的プレースホルダ > エスケープ処理
+
+
+
+# フォールトトレランス
+
+## フォールトアボイダンスとフォールトトレランス
+
+### フォールトアボイダンス
+信頼性向上手段としては、伝統的なやり方。
+精度、品質の高い製品を用いることで、故障の確率を減らす。
+
+### フォールトトレランス
+故障は必ず発生するものとして、その際の処理を盛り込んでおくことで、全体的に見れば問題なく業務を続行できるようにしておくこと。
+
+## フェール〇〇
+
+### フェールセーフ
+故障した時に、安全側になるような工夫。
+
+### フェールオーバ
+故障した時、代替機に処理を引き継ぐこと。本番系と待機系を用意する**冗長構成**にしておき、本番系が壊れたら待機系で仕事を続行する
+フェールオーバした後に、修理が済んだ本番系に処理を戻すことを**フェールバック**という。
+
+### フェールソフト
+故障して100%の機能を維持できない時、ある機能を切り捨てることで全停止に至らないようにする工夫。
+
+### フールプルーフ
+人為的なミスを防止する工夫。
