バックアップ方法

--- a/情報処理安全確保支援士/ポケット攻略本/セキュリティ対策と実装.md
+++ b/情報処理安全確保支援士/ポケット攻略本/セキュリティ対策と実装.md
@@ -300,3 +300,30 @@ SQLインジェクション対策として問われる項目。
 
 ### フールプルーフ
 人為的なミスを防止する工夫。
+
+
+
+# バックアップ
+
+## バックアップ計画
+
+### 世代管理
+
+### データの保存場所
+遠隔地保存が良いとされているが、メンテナンスと復旧のしやすさから近い場所にバックアップを取得するケースもある。
+
+## バックアップ方法
+
+### フルバックアップ
+バックアップ対象のデータを毎回全て取得する。バックアップにかかる時間は最大、リストア時間は最短。
+
+### 差分バックアップ
+週に一度などの頻度でバックアップ対象全てを取得し基準データとする。他の日は基準データから変更があった部分だけを取得することで、バックアップ時間とバックアップ領域を節約する。
+
+### 増分バックアップ
+週に一度などの頻度で基準データを取得し、次の日には基準データからの変更分を、その次の日には前の日からの変更分を取得する。バックアップ時間と領域は最小化できるが、リストア時間と手間が掛かる。
+
+## バックアップ運用
+- バックアップ作業のログは残し、定期的に監視する。
+- 定期的なチェックで、バックアップが空振りしていたなどの事態を発見する。
+- データの発生から消滅まで、ライフサイクル管理をしっかりする。
