ネットワーク管理技術

--- a/情報処理安全確保支援士/ポケット攻略本/セキュリティ対策と実装.md
+++ b/情報処理安全確保支援士/ポケット攻略本/セキュリティ対策と実装.md
@@ -327,3 +327,27 @@ SQLインジェクション対策として問われる項目。
 - バックアップ作業のログは残し、定期的に監視する。
 - 定期的なチェックで、バックアップが空振りしていたなどの事態を発見する。
 - データの発生から消滅まで、ライフサイクル管理をしっかりする。
+
+
+
+# ネットワーク管理技術
+
+## SNMP
+TCP/IPプロトコルスイートでは、共通の管理プロトコルが定められており、それがSNMP。
+
+SNMPでは各機器はSNMP**マネージャ**（監視する側）とSNMP**エージェント**（監視される側）に二分され、**管理情報（PDU）**をやり取りすることでネットワーク管理を行う。このPDUをTrapという。
+
+
+### SNMPの動作
+
+#### 動作確認
+マネージャがエージェントにリクエスト(Get-Request)を発行して、それに応えたエージェントがレスポンス(Get-Response)を返信することで管理する。
+
+#### 設定変更
+Set-Requestでエージェントの設定を変更した後で、Get-Requestで変更の反映を確認するのが特徴。
+
+#### イベント通知
+エージェントが障害（イベント）を検出したとき、マネージャにTrapで知らせる。マネージャからのレスポンスはなし。
+
+## syslog
+ログを一元管理できる。クライアント/サーバ型で動作する。サーバ側のプログラムを**syslogd**と呼ぶ。
