共通鍵暗号

--- a/情報処理安全確保支援士/ポケット攻略本/暗号と認証.md
+++ b/情報処理安全確保支援士/ポケット攻略本/暗号と認証.md
@@ -20,3 +20,23 @@
 ### NIST
 アメリカ国立標準技術研究所の略称で、技術標準の策定機関。
 **FIPS PUB140**(暗号モジュールのセキュリティ水準要求事項)を定めた。
+
+
+
+# 共通鍵暗号
+
+## 共通鍵暗号の仕組み
+暗号化と復号で同じ鍵を使う。
+
+### 共通鍵の暗号方式：AES
+広く普及したDESの安全性に黄信号が点ったため新しく作られた。
+ブロック長は128bit固定で、鍵長は128bit、192bit、256bitから任意に選べる。
+
+## 共通鍵暗号の欠点
+- 送信者と受信者が同じ鍵を持つ必要がある。
+- 鍵の数が増える。n人が参加するネットワークでn(n-1)/2個の鍵が必要。
+
+## 量子暗号
+量子鍵配送を指す。使い捨ての暗号鍵を事前に共有するための方法。
+攻撃者が盗聴を行えば、必ず検出できる。
+量子通信路を用いて安全に共有した乱数列を使い捨ての暗号鍵として用いることによって、原理的に第三者に解読されない秘匿通信が実現できる。
