公開鍵暗号

--- a/情報処理安全確保支援士/ポケット攻略本/暗号と認証.md
+++ b/情報処理安全確保支援士/ポケット攻略本/暗号と認証.md
@@ -40,3 +40,46 @@
 量子鍵配送を指す。使い捨ての暗号鍵を事前に共有するための方法。
 攻撃者が盗聴を行えば、必ず検出できる。
 量子通信路を用いて安全に共有した乱数列を使い捨ての暗号鍵として用いることによって、原理的に第三者に解読されない秘匿通信が実現できる。
+
+
+
+# 公開鍵暗号
+暗号化する鍵と復号する鍵が異なる。
+
+## 公開鍵暗号の特徴
+暗号化を鍵（暗号化鍵）のことを公開鍵と呼ぶ。
+復号鍵のことは秘密鍵と呼び区別する。
+処理速度は遅い。
+
+### 公開鍵暗号の鍵の数
+鍵を使い回せるので鍵の数を減らすことができる。2n。
+
+## 公開鍵暗号の欠点とハイブリッド暗号
+公開鍵暗号は、暗号化と復号に大きな時間がかかり、CPUに負荷を掛ける。一般に共通鍵暗号の数百倍〜数千倍の時間が必要。
+
+### ハイブリッド暗号
+通信のスタート時は公開鍵暗号で通信し、使い捨てにする共通鍵を交換する。以降は、高速な共通鍵暗号方式を使って暗号通信を行う。
+
+## 公開鍵暗号の実装技術
+
+### RSA
+広く使われている公開鍵暗号アルゴリズム。大きな数値の素因数分解に非常に時間がかかる性質を利用する。
+
+### 楕円曲線暗号
+楕円曲線上の演算規則を利用して鍵を生成する。離散対数問題を解くのにとても時間がかかる性質を利用する。RSAよりも短い鍵で安全性を確保できる。
+
+### ハイブリッド暗号
+公開鍵暗号方式の処理負荷を軽減するために、まず公開鍵暗号方式で通信路を確保して共通鍵を交換し、その後に共通鍵暗号方式で通信を行う。
+
+## S/MIME
+電子メールの拡張仕様であるMIMEに手を加えたもので、暗号化と認証の機能が追加されている。**暗号化には公開鍵暗号**が、**認証にはデジタル署名**が使われている。
+
+### SMTPヘッダ
+暗号化されない。
+- 送信元アドレス
+- 宛先アドレス
+- 件名
+
+### SMTPボディ
+暗号化される。
+- メール本文
