--- a/情報処理安全確保支援士/ポケット攻略本/暗号と認証.md
+++ b/情報処理安全確保支援士/ポケット攻略本/暗号と認証.md
@@ -83,3 +83,99 @@
 ### SMTPボディ
 暗号化される。
 - メール本文
+
+
+
+# 認証
+
+## 認証とアクセスコントロール
+
+### 識別
+サービスを受けようとしている人が誰かを認識するもの。ユーザIDなどがこれに該当する。
+
+### 認証
+申告されたユーザIDが、申告者本人のものか確認するステップ。ユーザIDは既知の情報なので、それだけですぐにサービスを始めるわけにはいけない。秘密の情報であるパスワードを使って本人確認をする。
+
+### アクセス権管理
+その人にどこまでのサービスを提供するか決める。
+
+## パスワード認証
+非常に漏れやすい。
+
+### 予期せぬ伝搬対策
+- 人前でパスワードを喋らない。
+- メモしてパソコンに貼ったりしない。
+- 既知の情報をパスワードにしない。
+- 長大で複雑なパスワードにする。
+- 定期的にパスワードを変更する。
+
+## パスワード認証の仕組み
+
+### PAP
+パスワードそのものがネットワーク上を流れる認証方式で、現状で非常に危険な認証方法。別の仕組みを暗号化されている、物理的に盗聴が不可能な不可能な環境であるといった状況でないと使えない。
+
+### CHAP
+盗聴のリスクに対抗するには、以下の方法がある。
+- パスワードを暗号化する。
+- パスワードをネットワーク上に送信することなく認証を行う。
+
+CHAPは**チャレンジレスポンス**というやり方で、パスワードを送信せずに認証する。
+
+#### チャレンジレスポンス
+1. クライアントは、ユーザIDを送信する。
+2. サーバは、チャレンジコード（乱数）を返信する。
+3. クライアントは、パスワードとチャレンジコードからハッシュ値を作り、サーバに送信する。
+4. ユーザはユーザIDに対応するパスワードとチャレンジコードからハッシュ値を作り、クライアントから送られてきたハッシュと比較する。
+
+### EAP
+PPPで認証機能を付加したプロトコル。EAPが固定的な認証機能を持つわけではなく、枠組みを用意して、実際の認証にどんな技術を使うか選択できる。
+
+## ワンタイムパスワード
+- パスワードを使い捨てにする方法。
+- 1回しか使用されないのなら、盗聴されたり推測されたりしても、不正利用する暇がない。
+
+### S/KEY
+サーバとクライアントに**同じパスフレーズ**をあらかじめ登録しておき、サーバが**乱数**と**シーケンス番号**で作った**シード**を**チャレンジコード**としてクライアントに送信する。
+クライアント側でシーケンス番号-1回だけハッシュ処理を行い、それをワンタイムパスワードとして、サーバに送信することで、ワンタイムパスワードがネットワーク上に流れない。
+
+### 時刻同期方式
+パスワードを作る**ネタ(シード)として時刻**を使う。チャレンジコードをやり取りする必要がなく、ネットワークに余分な情報を流さない点で優れている。
+その代わり、時刻から**トークンコード**と呼ばれる認証情報を作るトークンがサーバにもクライアントにも必要になる。
+トークンコードと事前に登録してある**個人識別番号(PIN)**を合わせてワンタイムパスワードを作る。
+
+#### 特徴
+- サーバ/クライアント間での時刻同期が絶対の条件
+- NTPと併用される
+- 時刻のズレをどのくらい許容するかがミソ
+
+## バイオメトリクス認証
+生体認証と呼ばれ、人の生体情報を手がかりに本人確認をするやり方。
+
+### 指紋
+シリコンなどで指紋のコピーを作り、認証を突破したケースもある。
+
+### 虹彩、網膜
+目の情報を使って個人を識別する。高い精度で本人確認できるが、装置が大掛かりで、高コスト。
+
+### 声紋
+声から作られたエンベロープパターンを元に認証を行う。手軽に使えるが、認証精度は他の認証方法に比べると劣り、喉を痛める、加齢により誤認症を起こすこともある。
+
+## その他の認証強化方法
+
+### 多要素認証
+知識による認証、生体認証、所有物による認証などのうち、いくつかを組み合わせて安全性を高める認証方法。
+
+### リスクベース認証
+**普段と異なる状況**が生じ、高いリスクが見込まれるときに、パスワード認証や画像認証を追加で行う仕組み。
+
+### ソルト
+パスワードを登録する際には直接保存せず、ハッシュ値にする。パスワードとランダムな文字列を加えてからこのハッシュ値を生成する。
+
+### 耐タンパ性
+外部機器から組織内の情報を読まれたり書き換えられたりすることにどれだけ耐えられるかを表す指標。
+
+### TPM(Trusted Platform Module)
+コンピュータの基板上に実装するセキュリティチップ。暗号化や復号、ハッシュ値の計算、デジタル署名、暗号鍵の保存などを行う。ソフトウェアでこれらを実現する方法に比べると耐タンパ性が高まる。
+
+### RFID
+ID情報を記載した無線対応チップ。人や商品の識別、管理、追跡などに使われる。バーコードに比べ、処理効率やトレーサビリティで優れる。
