公開鍵基盤(PKI)

--- a/情報処理安全確保支援士/ポケット攻略本/暗号と認証.md
+++ b/情報処理安全確保支援士/ポケット攻略本/暗号と認証.md
@@ -202,3 +202,58 @@ ID情報を記載した無線対応チップ。人や商品の識別、管理、
 - SHA-1：1995年から米国政府が使っていた関数。任意の長さの平文から160bitのメッセージダイジェストを作る。脆弱性が指摘されたため、米国政府が使う関数はSHA-2へと移行した。
 - SHA-2：SHA-1の発展版。生成するbit数が長い方が安全なので、SHA-1の160bitから224、256、384、512bitのハッシュ値が得られるように改良された。ハッシュの長さによって、SHA-224、SHA-256などと呼ばれることもあるが、まとめてSHA-2と呼ぶのが一般的。
 - SHA-3：SHA-2の次世代の規格。安全性の強化のため、共通鍵暗号方式のAESのアルゴリズムに変更している。
+
+
+
+# 公開鍵基盤(PKI)
+署名した人＝本人を保証する仕組み。
+
+## 公開鍵基盤が必要な理由
+**第三者が本人確認**をすることでなりすましを防ぐ。
+署名を行おうとする人は、**認証局（CA）**と呼ばれる第三者機関に鍵ペアの公開鍵と身分証明を提出し、それに認証局の秘密鍵でデジタル署名してもらった**デジタル証明書**を発行してもらう。
+
+## 登録局、発行局、検証局
+認証局は、デジタル署名の登録業務を行う**登録局（RA）**と、発行業務（**IA**）を行う**発行局**、デジタル署名の正当性を確認する**検証局（VA）**に分けられる。証明書執行リスト（CRL）はVAが管理している。
+役所だけでなく民間企業もサービスを提供している。
+ブラウザには主要な認証局のデジタル証明書がインストールされている。
+
+## 認証の階層
+世の中の認証局のデジタル証明書を全てブラウザにインストールしておくことはできない。
+認証局間に**階層**を作り、認証を連鎖させる。
+
+階層構造の最上位に位置する認証局を**ルート認証局**と呼ぶ。
+ルート認証局は自分自身の秘密鍵で署名をしてデジタル証明書を発行する。これを**ルート証明書**と呼ぶ。
+
+## デジタル証明書の失効とCRL
+デジタル証明書には**有効期限**が設定され、有効期限を過ぎた証明書は効力を失う。有効期限内であっても、鍵を紛失したり盗難されたりした場合は、認証局に届け出てデジタル証明書を失効させる。
+
+### デジタル証明書の有効期限
+デジタル証明書の有効期限は、デジタル証明書内に記載されている。
+
+#### X.509
+ITU-Tの勧告。
+
+#### CRL（Certificate Revocation List：証明書失効リスト）
+デジタル証明書の運用時にCRLをチェックするのは必須知識。
+
+#### OCSP
+CRLをチェックするためのプロトコル。
+
+**OCSPクライアント**：問い合わせる側
+**OCSPレスポンダ**：問い合わせに答える側
+
+OCSPクライアントはデジタル証明書のシリアル番号、証明書発行者の識別名のハッシュ値を送り、OCSPレスポンダはその情報をもとにデジタル証明書が有効かを回答する。
+
+## タイムスタンプ
+電子文書の存在証明や完全性（改ざんや欠落の有無）の検査を行う。
+電子文書に時刻情報を挿入し、その時点で文書が存在していたことを証明する。
+
+### 時刻認証局（TSA）
+利用者は時刻認証局に電子文書のハッシュ値を送る。
+
+### 時刻配信局（TA）
+時刻認証局は正しい時刻を時刻配信局から取得し、ハッシュと時刻情報からタイムスタンプトークンを作り、利用者に返信する。
+
+### タイムスタンプトークン
+**存在証明**と**完全性証明**を行う。
+TSAの公開鍵で復号し、ハッシュ値を取り出し、文書のハッシュ値と比較する。
