--- a/情報処理安全確保支援士/ポケット攻略本/暗号と認証.md
+++ b/情報処理安全確保支援士/ポケット攻略本/暗号と認証.md
@@ -295,3 +295,43 @@ RADIUSの後継。
 2. ASはKDBからチケットを取り出して送信
 3. プリンシパルはチケットをTGSに送信して、サーバ使用を要求
 4. TGSはサーバ使用許可証と共通鍵を返信
+
+
+
+# SSL/TLS
+セキュリティ通信プロトコルで、暗号化と認証の機能を提供する。アプリケーション層からはTCPのように扱えるので、プログラムの修正を最小限に留められる。
+
+## SSL/TLSの通信手順
+ネットスケープ社が自社ブラウザのために開発したプロトコル。その後、標準化されTLSと名前を変えたが、今でもSSLという呼び方がよく使われる。
+
+### 通信の特徴
+- トランスポート層〜セッション層で動く
+- http=TCP80番、https(SSL)=TCP443番
+- デジタル証明書を利用したクライアント認証、サーバ認証ができる
+- TCPを置き換えるのではなく、アプリとTCPの間で動作する
+
+### SSL/TLSでの伝送路の確立手順（ハンドシェイク）
+1. サーバを認証する
+2. 暗号化アルゴリズムを決める
+3. 暗号化鍵をMAC（メッセージダイジェスト）を作る
+
+SSL/TLSのサーバ証明書の発行には強度の違いがある。
+
+### 特徴
+- SSL/TLSは暗号化と認証を行うプロトコル
+- 基本的にはブラウザで使うが、他の通信の下位プロトコルとして使われることもある
+- 暗号スイート（暗号化アルゴリズムとハッシュアルゴリズムの組み）を定義
+- 暗号化アルゴリズムは複数から選べる
+- ハイブリッド通信
+
+### データ転送
+TLS Recordというプロトコルに従って行われる。
+1. 送りたいデータを規定のサイズに区切る
+2. 区切ったデータにMACを付加
+3. 暗号化する
+4. Recordヘッダを暗号化データにつける
+
+### HTTPの暗号化
+暗号化通信としてSSL/TLSを、下位のプロトコルとしてTCPを使う。
+この状態（スキーム）を**HTTPS**と呼ぶ。
+使用するポート番号が変わる。
