--- a/情報処理安全確保支援士/ポケット攻略本/マネジメントと法務.md
+++ b/情報処理安全確保支援士/ポケット攻略本/マネジメントと法務.md
@@ -47,3 +47,18 @@ ISMSを運用すれば、
 - **セキュリティプロシージャ**ともいう
 - 各種イベントで書き直され、見直し頻度が激しい
 - 規程の世代管理をする
+
+
+
+# ISMSの運用
+日本情報経済社会推進協会（**JIPDEC**）が行なっている情報セキュリティマネジメントシステムの認証制度。ISMS認証の取得を希望する組織は、JIS Q 27002に倣ってマネジメントシステムを構築し、JIPDECが認定した認証機関がこれを審査する。審査の基準として使うのがJIS Q 27001。
+
+## 適用範囲を定める
+適用した項目や資産については、その理由を残しておく。
+自社社員の個人情報も保護する必要がある。
+
+## 情報資産管理台帳を作る
+**情報資産管理台帳**を作って、「持っているもの」、「守るべきもの」の洗い出しを行う。
+
+## 情報セキュリティ委員会を作る
+セキュリティ管理を企画して、管理・運用していく組織。**経営層の参加**が必須。
