セキュリティシステムの運用

--- a/情報処理安全確保支援士/ポケット攻略本/マネジメントと法務.md
+++ b/情報処理安全確保支援士/ポケット攻略本/マネジメントと法務.md
@@ -62,3 +62,20 @@ ISMSを運用すれば、
 
 ## 情報セキュリティ委員会を作る
 セキュリティ管理を企画して、管理・運用していく組織。**経営層の参加**が必須。
+
+
+
+# セキュリティシステムの運用
+セキュリティに関連するパッチや必ず導入して、セキュリティホールを残さないように運用するのが基本。
+
+## セキュリティパッチの適用
+脆弱性の発見とそれに対応する修正プログラム（**セキュリティパッチ**）の配布が繰り返されることを前提に運用計画を立てる必要がある。
+
+### Exploitコード
+ソフトウェアの脆弱性を検証するプログラム。
+研究者やベンダが、情報提供や分析促進の目的で公開するが、攻撃者にも攻撃のための手がかりを与えてしまう。**ゼロデイ攻撃**が生じやすくなるので、Exploitコードが公開されたら情報収集や対応方法の策定に努める。
+
+## ログの収集
+システム監査時には監査証跡となり、近年では**デジタルフォレンジックス**の進展により法廷での利用に耐えうる精度が求められる。
+
+近年では、ログの運用性を上げるために、**syslog**プロトコルを使うログサーバが導入されることがある。
