サービスマネジメント

--- a/情報処理安全確保支援士/ポケット攻略本/マネジメントと法務.md
+++ b/情報処理安全確保支援士/ポケット攻略本/マネジメントと法務.md
@@ -79,3 +79,30 @@ ISMSを運用すれば、
 システム監査時には監査証跡となり、近年では**デジタルフォレンジックス**の進展により法廷での利用に耐えうる精度が求められる。
 
 近年では、ログの運用性を上げるために、**syslog**プロトコルを使うログサーバが導入されることがある。
+
+
+
+# サービスマネジメント
+
+## SLA
+サービスレベルアグリーメント、すなわち**サービス水準の合意**。
+サービスの提供側と利用者側が合意して、文書の形で明らかにする。
+
+## ITIL
+SLAを達成するためのサービス管理の**ベストプラクティス**（模範的事例を集めたガイドライン）。
+
+### サービスサポート
+- サポートデスク、インシデント管理
+- 問題管理、構成管理
+- 変更管理、リリース管理
+
+#### JIS Q 20000
+- JIS Q 20000-1：認証基準
+- JIS Q 20000-2；ベストプラクティス
+
+### ライフサイクル
+- サービスストラテジ
+- サービスデザイン
+- サービストランジション
+- サービスオペレーション
+- 継続的サービス改善
