ソフトウェアのテスト

--- a/情報処理安全確保支援士/ポケット攻略本/ソフトウェア開発技術とセキュリティ.md
+++ b/情報処理安全確保支援士/ポケット攻略本/ソフトウェア開発技術とセキュリティ.md
@@ -44,3 +44,50 @@
 レベル３：一貫性のあるプロセスが確立した状態
 レベル４：確立した標準プロセスを定量評価し、フィードバックできる状態
 レベル５：環境の差異に応じて標準プロセスを最適化できる状態
+
+
+
+# ソフトウェアのテスト
+
+## プロセスによる分類
+- 単体テスト
+- 結合テスト
+- システムテスト
+- 検収テスト
+- 運用テスト
+
+## 結合テスト
+
+### ビッグバンテスト
+個々に作られ単体テストの終了したモジュールを一気に接続して行うテスト。
+うまく動けばテスト期間を大きく短縮できるが、トラブルが発生した時に問題点を特定するのが難しい欠点がある。
+
+### ボトムアップテスト
+階層化されたモジュールを**下位モジュール**上位モジュールへと接続しつつ、実施するテスト。
+複数のテストを並列実施できる利点がある。
+
+### トップダウンテスト
+階層化されたモジュールを**上位モジュール**から下位モジュールへと繋いでいくテスト。
+システムの中核部分の瑕疵を早く発見できるのが利点だが、中核部分が完成していないとテストを開始することができない。
+
+### 視点による分類
+- ブラックボックステスト
+- ホワイトボックステスト
+
+#### レグレッションテスト
+すでに存在しているシステムやモジュールに変更を加えるとき、その変更が他の部分に悪影響を及ぼさない
+か確認するテスト。
+
+#### 探索的テスト
+小さい範囲でテストを行い、その結果を取得・分析して、範囲を変えたりテスト方法を変えたりするなど、柔軟に行なっていくスタイルのテスト。
+
+#### 状態遷移テスト
+その時置かれている状態を考慮して、各々の状態でソフトウェアが正しく振る舞いをするかチェックするテスト。
+
+## テストデータの設計
+
+### 同値分割
+データを性質ごと（正常値、異常値、など）に分割して、その集団の代表値を使ってテストする。
+
+### 限界値分析
+境目のデータを入力してテストを行う。
