システム開発の技法

--- a/情報処理安全確保支援士/ポケット攻略本/ソフトウェア開発技術とセキュリティ.md
+++ b/情報処理安全確保支援士/ポケット攻略本/ソフトウェア開発技術とセキュリティ.md
@@ -91,3 +91,66 @@
 
 ### 限界値分析
 境目のデータを入力してテストを行う。
+
+
+
+# システム開発の技法
+
+## 開発の進め方
+
+### ウォーターフォールモデル
+- 長所：統制しやすい。大規模開発に適用できる数少ないモデル。
+- 短所：後戻りがしやすい。
+
+### プロトタイプモデル
+- 長所：早い段階で完成品をイメージできる。開発側がユーザとの意識格差を素早く把握して設計を修正することができる。
+- 短所：試作品を作ることができる規模、種別が限られる。試作品を作るたびにユーザ側の意見が変わり、本番開発に着手できないことも。
+
+### スパイラルモデル
+部分的な試作品を作り、それをユーザに見せて承認を受けた後で、別の部分の開発に着手する。
+- 長所：完成品のプロトタイプを作るのが難しいケースでも行える。ユーザからのフィードバックを継続的に受けつつ開発することができる。
+- 短所：いつまでも開発が終わらないリスクがある。繰り返しているうちに仕様などに矛盾が生じる可能性もある。
+
+### アジャイル
+迅速で柔軟なシステム開発を目指す開発手法。少数精鋭のチームで小さな機能を短期間で設計、開発、テストまでしてリリースする。この一連の作業を**イテレーション**と呼ぶ。イテレーションを繰り返して製品全体を構築していく。スパイラルモデルに似ているが、作る範囲や機関がずっと短く小さい。
+
+### ペアプログラミング
+2人1組でプログラミングを行う開発手法。1人（ドライバ）がコーディングを、もう1人（ナビゲータ）がレビューやアドバイスを行うことで、1人での作業時よりも高難易度のコードやわかりやすいコードを書けるようになるもの。
+
+### エクストリームプログラミング
+アジャイルを行うための手法。短い開発サイクルと顧客とプログラマのコミュニケーション、シンプルでフラットなプロジェクト管理が仕様変更が推奨されており、短期間での多数のフィードバックが仕様変更への追従性を高める。実践手法としてペアプログラミングやテスト駆動開発が使われる。
+
+### マッシュアップ
+既存のサービス同士を組み合わせることで、最小限のリスクと開発負担で新しいサービスや付加価値を作る手法
+
+## システム設計のアプローチ方法
+
+### プロセス中心のアプローチ
+業務処理の「手順」を軸にシステム設計を行う。
+- 長所：現実の業務と整合性が高く、設計しやすい。
+- 短所：業務手順の変更に伴ってシステムの変更を行う必要が生じたり、システム間の連携が取りにくいことも。
+
+### データ中心アプローチ
+業務処理の「データ」を軸にシステム設計を行う。
+実業むでも、重要なのは手順ではなくデータであるとの認識が進んだことから、採用されることが多くなっている。
+- 長所：データの一元管理ができる。システム間の連携が容易。
+- 短所：データ構造が安定している前提。データの構造の変更によりプログラムの大規模変更が伴う。
+
+#### DFD
+データ中心アプローチで、データの構造を図示して把握しやすくするために使われるツール。
+
+## オブジェクト思考分析
+データに加えて、それを処理するための**手続**（**メソッド**）をまとめて扱うもの。データと手続きをモジュール内に内包する（**カプセル化して、オブジェクトにする**）ことで、データの構造を知らなくても、データを処理できるようになる。
+
+### SOA(Service-oriented architecture：サービス指向アーキテクチャ)
+ある業務をサービスと見立て、それを単位にソフトウェアを構築する方法。
+
+## 開発を取り巻く環境
+
+### GitHub
+
+### UML
+
+### JIS X 25010
+システム及びソフトウェア製品の品質要求及び評価の規格。
+品質特性は機能適合性、性能能率性、互換性、使用性、信頼性、セキュリティ、保守性、移植性の８つが定められている。
