セキュアプログラミング C/C++

--- a/情報処理安全確保支援士/ポケット攻略本/ソフトウェア開発技術とセキュリティ.md
+++ b/情報処理安全確保支援士/ポケット攻略本/ソフトウェア開発技術とセキュリティ.md
@@ -154,3 +154,47 @@
 ### JIS X 25010
 システム及びソフトウェア製品の品質要求及び評価の規格。
 品質特性は機能適合性、性能能率性、互換性、使用性、信頼性、セキュリティ、保守性、移植性の８つが定められている。
+
+
+
+# セキュアプログラミング C/C++
+
+## 安全なプログラミングとは
+
+### 要件定義の段階から考慮するべきもの
+- 脅威モデリング
+- 暗号技術の選定
+- ログの確保
+
+### 設計の段階から考慮するべきもの
+- セキュリティテスト
+- メモリリーク対策
+- レースコンディション対策
+- 構成ファイルからの情報漏洩対策
+- 最小特権の原則
+- 一時ファイルの扱い
+- エラーメッセージからの情報漏洩
+- 入力検査
+
+### 実装の段階で初めて考慮しても手遅れでないもの
+- ソースコードレビュー
+- メモリクリア失敗対策
+- ページング、メモリダンプ対策
+- ファイル拡張子による起動対策
+- バッファオーバフロー対策
+- SQLインジェクション対策
+
+## 出題されるC/C++の脆弱性
+
+### ディレクトリトラバーサル
+利用者にファイル名を入力させるケースで発生する。意図しないディレクトリのファイルにアクセスされないようにする。
+
+### シンボリックリンク攻撃
+ファイルやディレクトリに別名をつける機能。
+重要なディレクトリに不正なシンボリックリンクを作ることで、本来意図していないディレクトリにアクセスし、ファイルの読み出しや改ざんをされる。
+
+### レースコンディション
+プログラムが他のプログラムなどの要素と競合することで、計算結果が他のプログラムに依存してしまう状態。例は略。
+
+### バッファオーバーフロー
+プログラムの実行環境が用意しているバッファを上回る大きさのデータが入力された時に起こり、他のデータを上書きして破壊したり、意図しない動作、攻撃者の思い通りの動作をするなどの悪影響を及ぼす。
