セキュアプログラミング Java, ECMAScript

--- a/情報処理安全確保支援士/ポケット攻略本/ソフトウェア開発技術とセキュリティ.md
+++ b/情報処理安全確保支援士/ポケット攻略本/ソフトウェア開発技術とセキュリティ.md
@@ -198,3 +198,19 @@
 
 ### バッファオーバーフロー
 プログラムの実行環境が用意しているバッファを上回る大きさのデータが入力された時に起こり、他のデータを上書きして破壊したり、意図しない動作、攻撃者の思い通りの動作をするなどの悪影響を及ぼす。
+
+
+
+# セキュアプログラミング Java, ECMAScript
+
+## JAVAのセキュアプログラミング
+
+### サンドボックス(砂場)モデル
+隔離された部屋のようなもので、サンドボックスモデルの環境では原則として隔離されたエリアでプログラムを実行する。
+
+### パーミッション付与の仕組み
+JAVAでは、セキュリティマネージャと呼ばれる機構がプロセスやファイルといったコンピュータ資源へのアクセスを一元管理している。
+どのプログラムが、どのリソースへアクセスして良いかは、**ポリシーファイル**という一覧表にまとめられており、アクセス要求が発生するとセキュリティマネージャはポリシーファイルを参照して、許可/拒否を決定する。
+
+## ECMAScriptのセキュアプログラミング
+ECMAScriptは、JavaScriptを標準化したもの。基本的には同じと考えて良い。
